Added Tests, Made them work aswell